test/fail/error_type_cyclic.sest
module ErrorTypeCyclic = struct

  type t_x =
    t_y

  and t_y =
    t_x

end
